# gotm-fabm-memg-biogeochemical-model

./: CMakeLists.txt  README.md  memg_model_library.F90
bio_fennel/: ._2p2z.F90  ._light.F90  1p1z.F90  2p2z.F90  2p2z_sink.F90  light.F90  memg_bio_fennel_model_library.F90  oxygen.F90
example/: ._fabm.yaml  ._forcing  ._gotm.yaml  gotm.yaml
